# MoonTerminal

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  build-win-debug.ps1
.github/scripts/: make-dmg.sh
.github/workflows/: build.yml
assets/: param_deps.toml
crates/moon-chart/: Cargo.toml
crates/moon-chart/src/: axes.rs  container.rs  lib.rs  paint.rs  view.rs
crates/moon-chart/src/layers/: mod.rs  order_lines.rs
crates/moon-core/: Cargo.toml
crates/moon-core/src/: applog.rs  detect_diag.rs  lib.rs  metrics.rs  palette.rs  symbol.rs
crates/moon-core/src/config/: crypto.rs  groups.rs  hotkeys.rs  lang.rs  layout.rs  migrate.rs  mod.rs  orders.rs  paths.rs  reconcile.rs  schema.rs  secrets.rs  servers.rs  store.rs  theme.rs  toml_io.rs
crates/moon-core/src/data/: mod.rs  orderbook.rs  price_line.rs
crates/moon-core/src/db/: mod.rs  parse.rs
crates/moon-core/src/feed/: assets.rs  live.rs  mod.rs  report.rs  strategies.rs  synth.rs  trade.rs  types.rs
crates/moon-core/src/feed/live/: commands.rs  convert.rs  dirty.rs  mod.rs
crates/moon-core/src/market/: mod.rs  source.rs
crates/moon-core/src/session/: coordinator.rs  mod.rs  order_lines.rs  store.rs
crates/moon-core/src/util/: fmt.rs  mod.rs  time.rs
crates/moon-core/tests/: moonproto_feature_guard.rs
crates/moon-ui-gpui/: Cargo.toml  build.rs
crates/moon-ui-gpui/examples/: chart_proto.rs
crates/moon-ui-gpui/src/: axes.rs  chart_persist.rs  controls.rs  core_settings_popup.rs  crash.rs  debug_window.rs  design.rs  detached.rs  diag.rs  dock_persist.rs  firetest.rs  group_window.rs  icons.rs  input.rs  main.rs  terminal_chrome.rs  windowing.rs
crates/moon-ui-gpui/src/chart_tabs/: add_stack.rs  coin_search.rs  custom.rs  detached_host.rs  ingest.rs  layout_popup.rs  main_stack.rs  mod.rs  settings.rs  sig.rs  stack.rs  strip.rs  windows.rs
crates/moon-ui-gpui/src/chartdx/: backend.rs  background.rs  base.rs  combo.rs  cursor.rs  data_state.rs  engine.rs  gpu.rs  grid.rs  metal_backend.rs  mod.rs  orderbook.rs  pane.rs  readout.rs  render_state.rs  text.rs  types.rs  userdata.rs  view.rs  wgpu_backend.rs
crates/moon-ui-gpui/src/chartdx/shaders/: background.hlsl  bars.hlsl  blit.hlsl  chart_native.metal  crosses.hlsl  cursor.hlsl  grid.hlsl  native_background.wgsl  native_book.wgsl  native_crosses.wgsl  native_cursor.wgsl  native_grid.wgsl  native_hline.wgsl  native_marker.wgsl  native_price.wgsl  native_readout.wgsl  native_seg.wgsl  native_zone.wgsl  order_lines.hlsl  readout.hlsl
crates/moon-ui-gpui/src/panels/: chart.rs  common.rs  detects.rs  mod.rs  order.rs  stub.rs
crates/moon-ui-gpui/src/panels/assets/: mod.rs  table.rs  wallets.rs
crates/moon-ui-gpui/src/panels/chart/: geom.rs  mod.rs  refs.rs  render.rs  trade.rs
crates/moon-ui-gpui/src/panels/log/: controls.rs  mod.rs  render.rs
crates/moon-ui-gpui/src/panels/orders/: controls.rs  mod.rs  table.rs
crates/moon-ui-gpui/src/panels/report/: columns.rs  controls.rs  mod.rs
crates/moon-ui-gpui/src/settings/: connections.rs  general.rs  hotkeys.rs  interface.rs  lines.rs  mod.rs
crates/moon-ui-gpui/src/shell/: core_settings.rs  docks.rs  metrics.rs  mod.rs  status_bar.rs
crates/moon-ui-gpui/src/strategies/: filter.rs  logic.rs  mod.rs  params.rs  rules.rs  tree.rs  tree_dialogs.rs  tree_dnd.rs  tree_menu.rs  tree_moon.rs  tree_ops.rs  tree_ui.rs
crates/moon-ui-gpui/tests/: theme_contract.rs
docs/: ARCHITECTURE.md  FIRETEST.md  MAC_LINUX_BUILD.md  WINDOWING.md
locales/: README.md  assets.yml  connections.yml  dialogs.yml  dock.yml  errors.yml  general.yml  hotkeys.yml  interface.yml  lines.yml  orders.yml  report.yml  settings.yml  shell.yml  strategies.yml
scripts/: macos-bundle.sh
tools/: README.md  bench.ps1
tools/figma-moonproto-contract-inspector/: README.md  code.js  manifest.json  ui.html
